# opencv_qt_test_project

./: CMakeLists.txt  README.md
headers/: ImageProcesser.h  MainGUI.h
sources/: ImageProcesser.cpp  MainGUI.cpp  main.cpp
