cmake_minimum_required(VERSION 2.8)
project( QtTest )
set(OpenCV_DIR "C:/opencv/build")
find_package( OpenCV REQUIRED )
find_package( Qt5Widgets REQUIRED)
file(GLOB SOURCES sources/*.cpp headers/*.h)
add_executable(QtTest ${SOURCES})
target_link_libraries( QtTest ${OpenCV_LIBS} Qt5::Widgets)
target_include_directories(QtTest PUBLIC headers)
